--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header></header>
+
+
     <p> Contactanos!!</p>
+
+    
+    <footer></footer>
 </body>
+
 </html>
