--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     
-    <footer></footer>
+    <footer>
+        <p></p>
+        <p>Contact </p>
+        <p>Icons</p>
+    </footer>
 </body>
 </html>
